fixing color contrast

--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -26,7 +26,7 @@ h1 {
 }
 header > span {
     font-size: medium;
-    color: rgb(35, 141, 177);
+    color: lightblue;
 }
 
 main {
@@ -50,7 +50,7 @@ h3 {
     font-family: 'Gugi', sans-serif;
     padding: 10px;
     /* text-align: center; */
-    background: lightblue;
+    background: rgb(18, 163, 211);
     color: white;
 }
 section > div {
@@ -81,7 +81,7 @@ footer {
     padding-top: 5px;
     display: block;
     font-size: small;
-    color: rgb(35, 141, 177);
+    color: lightblue;
 }
 
 main {
